WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240401
[Repaint] Border ignores currentColor change when hovering
https://bugs.webkit.org/show_bug.cgi?id=240401
Summary
[Repaint] Border ignores currentColor change when hovering
alan
Reported
2022-05-13 15:27:52 PDT
ssia
Attachments
Patch
(17.97 KB, patch)
2022-05-13 16:35 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(15.18 KB, patch)
2022-05-13 18:40 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(19.54 KB, patch)
2022-05-14 06:53 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2022-05-13 16:35:57 PDT
Created
attachment 459328
[details]
Patch
alan
Comment 2
2022-05-13 18:40:41 PDT
Created
attachment 459337
[details]
Patch
Tim Nguyen (:ntim)
Comment 3
2022-05-14 00:04:01 PDT
Is
bug 223654
a duplicate?
Tim Nguyen (:ntim)
Comment 4
2022-05-14 00:05:18 PDT
Comment on
attachment 459337
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=459337&action=review
> LayoutTests/ChangeLog:12 > + * fast/repaint/repaint-current-color-border-on-hover-expected.txt: Added. > + * fast/repaint/repaint-current-color-border-on-hover.html: Added. > + * fast/repaint/repaint-pseudo-border-on-hover-expected.txt: Added. > + * fast/repaint/repaint-pseudo-border-on-hover.html: Added. > +
These files are not in the patch
alan
Comment 5
2022-05-14 05:34:04 PDT
(In reply to Tim Nguyen (:ntim) from
comment #4
)
> Comment on
attachment 459337
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=459337&action=review
> > > LayoutTests/ChangeLog:12 > > + * fast/repaint/repaint-current-color-border-on-hover-expected.txt: Added. > > + * fast/repaint/repaint-current-color-border-on-hover.html: Added. > > + * fast/repaint/repaint-pseudo-border-on-hover-expected.txt: Added. > > + * fast/repaint/repaint-pseudo-border-on-hover.html: Added. > > + > > These files are not in the patch
oops
Antti Koivisto
Comment 6
2022-05-14 05:39:53 PDT
Comment on
attachment 459337
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=459337&action=review
> Source/WebCore/rendering/style/BorderData.h:114 > + return !currentColorDiffers || (m_top.color().isValid() && m_right.color().isValid() && m_bottom.color().isValid() && m_left.color().isValid());
Might be more stylish to use RenderStyle::isCurrentColor(m_top.color()) etc.
alan
Comment 7
2022-05-14 06:53:00 PDT
Created
attachment 459355
[details]
Patch
alan
Comment 8
2022-05-14 06:58:35 PDT
(In reply to zalan from
comment #5
)
> (In reply to Tim Nguyen (:ntim) from
comment #4
) > > Comment on
attachment 459337
[details]
> > Patch > > > > View in context: > >
https://bugs.webkit.org/attachment.cgi?id=459337&action=review
> > > > > LayoutTests/ChangeLog:12 > > > + * fast/repaint/repaint-current-color-border-on-hover-expected.txt: Added. > > > + * fast/repaint/repaint-current-color-border-on-hover.html: Added. > > > + * fast/repaint/repaint-pseudo-border-on-hover-expected.txt: Added. > > > + * fast/repaint/repaint-pseudo-border-on-hover.html: Added. > > > + > > > > These files are not in the patch > oops
webkit-patch land is messing with my local state.
EWS
Comment 9
2022-05-14 08:25:41 PDT
Committed
r294195
(
250561@main
): <
https://commits.webkit.org/250561@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 459355
[details]
.
Radar WebKit Bug Importer
Comment 10
2022-05-14 08:26:14 PDT
<
rdar://problem/93291192
>
Tim Nguyen (:ntim)
Comment 11
2022-05-14 22:40:46 PDT
***
Bug 223654
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug